{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 139,
  "lineage": "35f145f4-db43-43c6-31e0-c162288e805b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ab609d618f46081",
            "arn": "arn:aws:ec2:us-east-1:945661072412:elastic-ip/eipalloc-00ab609d618f46081",
            "association_id": "eipassoc-003da816ee8138de7",
            "domain": "vpc",
            "id": "eipalloc-00ab609d618f46081",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09f17be28d2ba94e7",
            "private_dns": "ip-10-0-1-17.ec2.internal",
            "private_ip": "10.0.1.17",
            "public_dns": "ec2-32-193-249-15.compute-1.amazonaws.com",
            "public_ip": "32.193.249.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "25jdvr-nat-eip"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-nat-eip",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chatbot_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "get_password_data": false,
            "iam_instance_profile": "25jdvr-ec2-instance-profile",
            "id": "i-0c3049f3c3b5319a5",
            "instance_type": "m5.xlarge",
            "key_name": "25jdvr-keypair",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": true,
                "iops": 0,
                "throughput": 0,
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0978315fe8fc41697",
            "tags": {
              "Name": "25jdvr-chatbot-server",
              "Purpose": "Qwen2.5 inference + OpenWebUI"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-chatbot-server",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot",
              "Purpose": "Qwen2.5 inference + OpenWebUI"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6aff631ddc431a2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_security_group.ec2_chatbot",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945661072412:internet-gateway/igw-03a08aab799da3a5d",
            "id": "igw-03a08aab799da3a5d",
            "owner_id": "945661072412",
            "tags": {
              "Name": "25jdvr-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-igw",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot"
            },
            "vpc_id": "vpc-036b772cafa069518"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ab609d618f46081",
            "association_id": "eipassoc-003da816ee8138de7",
            "connectivity_type": "public",
            "id": "nat-060c2b806d6922a44",
            "network_interface_id": "eni-09f17be28d2ba94e7",
            "private_ip": "10.0.1.17",
            "public_ip": "32.193.249.15",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0978315fe8fc41697",
            "tags": {
              "Name": "25jdvr-nat-gw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-nat-gw",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945661072412:route-table/rtb-02f409e23cd1720f5",
            "id": "rtb-02f409e23cd1720f5",
            "owner_id": "945661072412",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-060c2b806d6922a44",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "25jdvr-private-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-private-rt",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b772cafa069518"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945661072412:route-table/rtb-0cc9093033593fcff",
            "id": "rtb-0cc9093033593fcff",
            "owner_id": "945661072412",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a08aab799da3a5d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "25jdvr-public-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-public-rt",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b772cafa069518"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036548cdba90c5777",
            "route_table_id": "rtb-02f409e23cd1720f5",
            "subnet_id": "subnet-064b9ecc33837025d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b1026c292cb6030",
            "route_table_id": "rtb-0cc9093033593fcff",
            "subnet_id": "subnet-0978315fe8fc41697"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_chatbot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945661072412:security-group/sg-0a6aff631ddc431a2",
            "description": "Security group for 25jdvr chatbot EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6aff631ddc431a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ollama inference API",
                "from_port": 11434,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11434
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "OpenWebUI browser chat interface",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "15.161.33.93/32"
                ],
                "description": "SSH from your machine only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "25jdvr-chatbot-sg",
            "name_prefix": "",
            "owner_id": "945661072412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "25jdvr-chatbot-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-chatbot-sg",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b772cafa069518"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945661072412:security-group/sg-04930f1eea6600139",
            "description": "Security group for 25jdvr EMR master node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04930f1eea6600139",
            "ingress": [
              {
                "cidr_blocks": [
                  "15.161.33.93/32"
                ],
                "description": "SSH to EMR master from your machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "15.161.33.93/32"
                ],
                "description": "Spark Web UI",
                "from_port": 18080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 18080
              }
            ],
            "name": "25jdvr-emr-master-sg",
            "name_prefix": "",
            "owner_id": "945661072412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "25jdvr-emr-master-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-emr-master-sg",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b772cafa069518"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945661072412:security-group/sg-06634113a86c6d8eb",
            "description": "Security group for 25jdvr EMR worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06634113a86c6d8eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Internal VPC communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "25jdvr-emr-worker-sg",
            "name_prefix": "",
            "owner_id": "945661072412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "25jdvr-emr-worker-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-emr-worker-sg",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b772cafa069518"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945661072412:subnet/subnet-064b9ecc33837025d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064b9ecc33837025d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945661072412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "25jdvr-private-subnet",
              "Tier": "Private"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-private-subnet",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot",
              "Tier": "Private"
            },
            "vpc_id": "vpc-036b772cafa069518"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945661072412:subnet/subnet-0978315fe8fc41697",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0978315fe8fc41697",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "945661072412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "25jdvr-public-subnet",
              "Tier": "Public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-public-subnet",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot",
              "Tier": "Public"
            },
            "vpc_id": "vpc-036b772cafa069518"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945661072412:vpc/vpc-036b772cafa069518",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e87bbbca14bf4e2e",
            "default_route_table_id": "rtb-03fba51620f05bf92",
            "default_security_group_id": "sg-0ad1aae9af744b3fe",
            "dhcp_options_id": "dopt-01790ae54b00a4dcf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036b772cafa069518",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03fba51620f05bf92",
            "owner_id": "945661072412",
            "tags": {
              "Name": "25jdvr-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-vpc",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945661072412:vpc-endpoint/vpce-0a707a9fe506ebabe",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a707a9fe506ebabe",
            "ip_address_type": "ipv4",
            "owner_id": "945661072412",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02f409e23cd1720f5",
              "rtb-0cc9093033593fcff"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "25jdvr-s3-endpoint"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "25jdvr-s3-endpoint",
              "NetID": "25jdvr",
              "Project": "CISC886-Chatbot"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-036b772cafa069518"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}